fingBugs fixes